# LucasCore

./: .env.example  .gitignore  6  AGENTS.md  Cargo.toml  README.md  developer-4  ecosystem.config.cjs  lcc-hq-communication-test-report-20260531.md  package.json
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/api/: mod.rs  router.rs
apps/api/src/api/branch/: mod.rs
apps/api/src/api/branch_files/: mod.rs
apps/api/src/api/canvas/: mod.rs
apps/api/src/api/daily_memory/: mod.rs
apps/api/src/api/health/: mod.rs
apps/api/src/api/memory/: mod.rs
apps/api/src/api/os_agent/: mod.rs
apps/api/src/api/peer/: mod.rs
apps/api/src/api/session/: mod.rs
apps/api/src/api/terminal/: mod.rs
apps/api/src/api/work_ledger/: mod.rs
apps/api/src/app/: mod.rs
apps/api/src/app/branch_files/: mod.rs
apps/api/src/app/canvas/: mod.rs
apps/api/src/app/daily_memory/: mod.rs
apps/api/src/app/memory/: mod.rs
apps/api/src/app/peer/: mod.rs
apps/api/src/app/session/: mod.rs
apps/api/src/app/terminal/: mod.rs
apps/api/src/app/work_ledger/: mod.rs
apps/api/src/domain/: mod.rs
apps/api/src/domain/branch_files/: branch_files.rs  mod.rs  port.rs
apps/api/src/domain/canvas/: canvas.rs  mod.rs  port.rs
apps/api/src/domain/daily_memory/: daily_memory.rs  mod.rs  port.rs
apps/api/src/domain/memory/: memory.rs  mod.rs  port.rs
apps/api/src/domain/os_agent/: mod.rs  os_agent.rs  port.rs
apps/api/src/domain/peer/: mod.rs  peer.rs  port.rs
apps/api/src/domain/terminal/: context.rs  mod.rs  (+2 more)
apps/api/src/infra/: mod.rs
apps/api/src/shared/: mod.rs
(+452 files in other folders)
